--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <title> Get Know Vinjeru </title>
+        <link rel="stylesheet" href="mylink.ss">
     </head>
-        <body style="background-color:antiquewhite;">
+        <body>
             <p>
                 My favorite song
             </p>
-    <pre style="color:brown">
+    <pre>
     Loving God, loving each other
     making music with my friends
     Loving God, loving each other 
