--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Get Know Vinjeru </title>
-        <link rel="stylesheet" href="mylink.ss">
+        <title> My Personal Portfolio</title>
     </head>
-        <body>
-            <p>
-                My favorite song
-            </p>
-    <pre>
-    Loving God, loving each other
-    making music with my friends
-    Loving God, loving each other 
-    And the story never ends
-    </pre>
-    <p>
-        Rare pictures of Tapiwa Chipoka
-    </p>
-    <image src="Vinjeru.jpg" width="300px" length="500px"/>
-    <image src="Vinjeru2.jpg" width="300px" length="500px"/>
-<p> May 8 <sup>th </sup>2023</p>
-            <form>
-    </body>
+    <boby align="center">
+        <h1>Hey there, I'm Tapiwa.</h1>
+        <p>
+            Web designer and developer from </br>
+            Mzuzu, Malawi. I create custom </br>
+            websites to help businesses do better</br> 
+            online. </p>
+        <image align="center" src="Vinjeru3.jpg" width="300px" length="500px"/></br>
+            <a href="MyProjects.html"> My Projects</a></br>
+            <a href="contact.html"> Contact</a> 
+    </boby>    
 </html>
