--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -10,7 +10,7 @@
             Mzuzu, Malawi. I create custom </br>
             websites to help businesses do better</br> 
             online. </p>
-        <image align="center" src="Vinjeru3.jpg" width="300px" length="500px"/></br>
+        <image src="Vinjeru3.jpg" width="300px" length="500px"/></br>
             <a href="MyProjects.html"> My Projects</a></br>
             <a href="contact.html"> Contact</a> 
     </boby>    
