--- a/index.html
+++ b/index.html
@@ -2,48 +2,22 @@
 <html>
 <head>
     <title>My Portfolio</title>
+    <link rel="stylesheet" hyref="mycss.css">
     <style>
-    header{
-        color:antiquewhite;
-    }
-    footer{
-        background-color: rgb(142, 166, 216);
-        color:darkslategray;
-    }   
-    h1{
-        font-size: larger;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-style: oblique;
-        font-size: x-large;
-        color: darkgoldenrod;
-    }
-    ul {
-  list-style-type: none;
-  overflow: hidden;
-  background-color: #333;
+      header{
+    color:antiquewhite;
 }
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111;
+footer{
+    background-color: rgb(142, 166, 216);
+    color:darkslategray;
 }
     </style>
 </head>
 <body align="center" style="background-color: antiquewhite;">
     
     <header style="background-color:darksalmon;">Tapiwa Chipoka
-        <ul>
+ 
+      <ul>
         <li><a class="active" href="index.html"></a>Home</li>
         <li><a href="About.html">My Skills</a></li>
         <li><a href="projects.html">My Projects</a></li>
