--- a/index.html
+++ b/index.html
@@ -2,32 +2,24 @@
 <html>
 <head>
     <title>My Portfolio</title>
-    <link rel="stylesheet" hyref="mycss.css">
-    <style>
-      header{
-    color:antiquewhite;
-}
-footer{
-    background-color: rgb(142, 166, 216);
-    color:darkslategray;
-}
-    </style>
+    <link rel="stylesheet" href="mycss.css">
 </head>
-<body align="center" style="background-color: antiquewhite;">
+<body>
     
-    <header style="background-color:darksalmon;">Tapiwa Chipoka
- 
+    <header>Tapiwa Chipoka
+ <nav>
       <ul>
         <li><a class="active" href="index.html"></a>Home</li>
         <li><a href="About.html">My Skills</a></li>
         <li><a href="projects.html">My Projects</a></li>
         </ul>
+ </nav>
     </header>
-    <h1 style="color:rgb(230, 12, 59)"> Hey there,</h1>
+    <h1> Hey there,</h1>
 
          <img src="Vinjeru3.jpg" width="300" length="500"/><br/>
 
-    <P style=" color: darksalmon;">  I'm Tapiwa Chipoka, 19 years old. Web designer</br> and developer from 
+    <P>  I'm Tapiwa Chipoka, 19 years old. Web designer</br> and developer from 
         Mzuzu, Malawi. I'm <a href="About.html"> skilled</a><br/> in creating and designing 
         Websites, graphic <br/>designs and anything related to Multimedia.<br/><a href="projects.html" >view more</P><br/>
        
