--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="style3.css">
+    <title>My Projects</title>
 </head>
 <style>
     h1{
@@ -24,7 +25,7 @@
           <ul></ul><input type="text" placeholder="Search..">
         </ul> ></span>
       </div>
-    <h1>My Projests</h1>
+    <h1>My Projects</h1>
 
     <div class="projects-container">
         <div class="project">
