--- a/skills.html
+++ b/skills.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="mine.css">
   <link rel="stylesheet" href="style2.css">
+  <title>My Skills</title>
 </head>
 <body style="background-color:darkslategrey;">
     <div class="navbar">
