--- a/contact.html
+++ b/contact.html
@@ -37,9 +37,9 @@
 </br>
     <p> Need to get in touch with me? Either fill out the<br>
          form with your inquiry or find me through any of the social-<br>
-         media sites in the header up top.</p>
-
-    <div class="form-container">
+         media sites in the header up top.</p><br>
+    
+         <div class="form-container">
 <p><b>Verify your details</b></p><br>
     <form name="myForm" action="portfolio.php" onsubmit="return validateForm()"  method="post">
       <label for="username">Username</label> 
@@ -52,7 +52,7 @@
       <textarea> message</textarea><br>
       <input type="submit" value="Submit">
     </form>
-</div>
+  </div>
 
     <script>
         function validateForm() {
